# juce-geometric-median

./: .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  GeometricMedianWindow.cpp  GeometricMedianWindow.h  MainComponent.cpp  MainComponent.h  PointsArea.cpp  PointsArea.h  main.cpp  main.h
src/domain/: CoordinateCluster.cpp  CoordinateCluster.h
src/gui/: GeometricMedianWindow.cpp  GeometricMedianWindow.h  MainComponent.cpp  MainComponent.h  PointsArea.cpp  PointsArea.h  ScalingService.cpp  ScalingService.h
tests/: CMakeLists.txt  scalingServiceTests.cpp  tests.cpp
